--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        ola, teste
+       <h1>ola, teste</h1>
             <h1>Teremos uma imagem aqui</h1> 
             <u1>
                 <li>Curso</li>
