--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
                 <li>Projetos</li>
             </u1>
     </header>
+
+    <section id="projeto">
+        <h2 class="projeto-titulo">Os nossos projetos</h2>
+        <div class="projeto-todos">
+            <span></span>
+            <div class="projeto-div">
+                <iframe src="https://scratch.mit.edu/projects/897408483/embed" allowtransparency="true" width="388" height="321" frameborder="0" scrolling="no" allowfullscreen></iframe>
+            </div>
+            <div class="projeto-div">
+                <iframe src="https://scratch.mit.edu/projects/909178956/embed" allowtransparency="true" width="388" height="321" frameborder="0" scrolling="no" allowfullscreen></iframe>
+            </div>
+            <div class="projeto-div">
+                <iframe src="https://scratch.mit.edu/projects/885495888/embed" allowtransparency="true" width="388" height="321" frameborder="0" scrolling="no" allowfullscreen></iframe>
+            </div>
+            <span></span>
+            <span></span>
+        </div>
+    </section>
 </body>
 
 </html>
