--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </u1>
     </header>
 
-    <section id="projeto">
+    <section class="projeto">
         <h2 class="projeto-titulo">Os nossos projetos</h2>
         <div class="projeto-todos">
             <span></span>
