--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 </head>
 
 <body>
-    <header>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da Alura Start">
             <h1>Teremos uma imagem aqui</h1> 
-            <u1>
-                <li>Curso</li>
-                <li>Projetos</li>
+            <u1 class="cabecalho-lista">
+                <li class="cabecalho-lista-item">Curso</li>
+                <li class="cabecalho-lista-item">Projetos</li>
             </u1>
     </header>
 </body>
