--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             </u1>
     </header>
 
+    <section class="projeto">
+        <h2 class="projeto-titulo">Nossos Projetos</h2>
+
+
+    </section>
+
     <iframe src="https://scratch.mit.edu/projects/919407060/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </body>
 
