--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
 
     <section class="projeto">
         <h2 class="projeto-titulo">Nossos Projetos</h2>
-
-
+        <div class="projeto-div">
+    
+            <iframe src="https://scratch.mit.edu/projects/919407060/embed" allowtransparency="true" width="485" height="402"
+                frameborder="0" scrolling="no" allowfullscreen></iframe>
+    
+        </div>
     </section>
 
-    <iframe src="https://scratch.mit.edu/projects/919407060/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </body>
 
 </html>
