--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
     </section>
 
+    <footer class="rodape">
+
+        <img class="rodape-imagem" src="alurastart logo.png" alt="logo da Alura start">
+    </footer>
+
 </body>
 
 </html>
